# PyInCerval

./: .gitignore  MANIFEST.in  pyproject.toml
.github/workflows/: python-package.yml
PYinCerval.egg-info/: PKG-INFO  SOURCES.txt
interval_arithmetic.egg-info/: PKG-INFO  SOURCES.txt
pyincerval/: #include "c_interval.h"  __init__.py  c_interval.c  c_interval.h  interval.c  interval.pxd  interval.pyx  pyproject.toml  setup.py
src/: __init__.py  c_interval.c  c_interval.h  interval.pxd  interval.pyx
tests/: test_interval.py
